# scuba

./: .bazelrc  .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build.sh  reformat.sh
cmake/: Toolchain-cloudabi-common.cmake  gRPC.txt
k8s.io/kubernetes/pkg/kubelet/apis/cri/v1alpha1/runtime/: BUILD.bazel  api.proto
scuba/image_service/: BUILD.bazel  CMakeLists.txt  configuration.proto  image_service.cc  image_service.h  program_main.cc
scuba/runtime_service/: BUILD.bazel  CMakeLists.txt  configuration.proto  container.cc  container.h  ip_address_allocator.cc  ip_address_allocator.h  iso8601_timestamp.cc  iso8601_timestamp.h  naming_scheme.cc  naming_scheme.h  pod_sandbox.cc  pod_sandbox.h  program_main.cc  runtime_service.cc  runtime_service.h  yaml_argdata_factory.cc  yaml_argdata_factory.h  yaml_builder.h  yaml_canonicalizing_factory.h  yaml_error_factory.h  yaml_factory.h  yaml_file_descriptor_factory.cc  yaml_file_descriptor_factory.h
scuba/util/: BUILD.bazel  fd_streambuf.h  grpc_connection_injector.h
